 cnp-nist-cm-7-1-least-func-periodic-review-oan78oi.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-nist-cm-7-1-least-func-periodic-review"-ugfbih2
  namespace: kube-system
spec:
  description: "Prohibit or restrict the use of the default ports open in containers."
  endpointSelector:
    matchLabels:
      controller-revision-hash: 56889964d4
      k8s-app: cilium
      pod-template-generation: 1
